force-app/main/default/objects/Approval_Properties__c/Approval_Properties__c.object-meta.xml
<CustomObject>
    <label>Approval Properties</label>
    <nameField>
        <label>Approval Properties Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Approval Properties</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>