force-app/main/default/objects/Approval_Properties__c/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <label>Field API Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>