force-app/main/default/objects/Approval_Properties__c/fields/Hidden__c.field-meta.xml
<CustomField>
    <fullName>Hidden__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The field will be added to the page but hidden from the end-user. This is necessary for dependent picklist functionality to work correctly.</inlineHelpText>
    <label>Hidden</label>
    <type>Checkbox</type>
</CustomField>