force-app/main/default/objects/Approval_Properties__c/fields/Parent_Property__c.field-meta.xml
<CustomField>
    <fullName>Parent_Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Hides this property if the users response does not match parent property values.</inlineHelpText>
    <label>Parent Property</label>
    <referenceTo>Approval_Properties__c</referenceTo>
    <relationshipName>Child_Properties</relationshipName>
    <type>Lookup</type>
</CustomField>