force-app/main/default/objects/Approval_Properties__c/fields/Parent_Property_Values__c.field-meta.xml
<CustomField>
    <fullName>Parent_Property_Values__c</fullName>
    <inlineHelpText>Semicolon delimited list of values. ex. &quot;Maybe;Other&quot;</inlineHelpText>
    <label>Parent Property Values</label>
    <type>TextArea</type>
</CustomField>