force-app/main/default/objects/Approval_Properties__c/fields/Production_SF_ID__c.field-meta.xml
<CustomField>
    <fullName>Production_SF_ID__c</fullName>
    <externalId>true</externalId>
    <label>Production SF ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>