force-app/main/default/objects/Approval_Properties__c/fields/Read_only__c.field-meta.xml
<CustomField>
    <fullName>Read_only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Read-only</label>
    <type>Checkbox</type>
</CustomField>