force-app/main/default/objects/Approval_Properties__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <label>Section</label>
    <referenceTo>Approval_Section__c</referenceTo>
    <relationshipLabel>Approval Properties</relationshipLabel>
    <relationshipName>Approval_Properties</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>