force-app/main/default/objects/Approval_Properties__c/fields/Text__c.field-meta.xml
<CustomField>
    <fullName>Text__c</fullName>
    <inlineHelpText>If this field is left blank the label of the associated field will be used.</inlineHelpText>
    <label>Question Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>